# debugging-cibuildwheel

./: CMakeLists.txt  MANIFEST.in  conanfile.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pip.yml  pip.yml.disabled  wheels.yml
docs/: conf.py
mymodule/: __init__.py
src/: CMakeLists.txt  mymodule.cpp
src/mymodule/: __init__.py
test/: test_mymodule.py
