# Copyright (C) 2023 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

[metadata]
name = mymodule
version = attr: mymodule.__version__
author = Roberto Rossini
author_email = roberros@uio.no
description = My module
long_description = file: LICENSE
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
python_requires = >=3.8
install_requires = importlib-metadata; python_version<"3.8"

[options.extras_require]
test = pytest>=6.0
